--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
             </li>{% endif %}
         </ul>
             <div>
-                <a href="{{ site.url }}/about/">{{ site.owner.name }}</a> &copy; {{ site.time | date: '%Y' }} &bull; All rights reserved.
+                <a href="{{ site.url }}/about/">{{ site.owner.name }}</a> &copy; {{ site.time | date: '%Y' }} &bull; All rights reserved
             </div>
             <ul class="menu-items">
             {% for link in site.links %}
@@ -47,7 +47,6 @@
                 {% endif %} 
             </li>
             {% endfor %}
-            <li><a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="icon-rss"></i> Feed</a></li>
         </ul>
         </div>
     </div>
