--- a/_layouts/pageminimal.html
+++ b/_layouts/pageminimal.html
@@ -19,12 +19,13 @@ Description: Awesome dude, awesome life
 {% include head.html %}
 </head>
 <body class="home-template" itemscope itemtype="http://schema.org/WebPage">
-{% include header.html %}
+
 <div id="main" class="content" role="main" itemprop="mainContentOfPage">
     <div class="container">
         <div class="row">
-            <div class="page-body col-md-10 col-md-offset-1" itemprop="description">
-                {{ content }}
+          <div class="page-body col-md-10 col-md-offset-1" itemprop="description">
+      <h1 style='text-align: right;'><img style='margin-top: 5px; margin-bottom: 0;' src="{{site.url}}/images/{{ site.logo }}" alt="{{site.title}}" /></h1>
+                      {{ content }}
             </div>    
         </div>
     </div>
