--- a/_layouts/pageminimal.html
+++ b/_layouts/pageminimal.html
@@ -4,7 +4,7 @@
 {% include head.html %}
 </head>
 <body class="home-template" itemscope itemtype="http://schema.org/WebPage">
-
+{% include header.html %}
 <div id="main" class="content" role="main" itemprop="mainContentOfPage">
     <div class="container">
         <div class="row">
