--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,10 +30,13 @@
         <div class="container">
             <a class="brand light" href="{{ site.url }}" role="banner" itemprop="url">
 
-                {% if site.logo %}<img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}" alt="{{ site.title }} Logo" />{% endif %}
+
 
             <h1 class="blog-title light" itemprop="name">
-                {{ site.title }}
+              {% if site.logo %}<img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}" alt="{{ site.title }} Logo" />
+              {% else %}
+              {{ site.title }}
+              {% endif %}
             </h1>
                 
             </a>
