--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
             <a class="brand light" href="{{ site.url }}" role="banner" itemprop="url">
             <h1 class="blog-title light" itemprop="name">
               {% if site.logo %}<img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}" alt="{{ site.title }}" />
-              {% elsif site.title }%
+              {% elsif site.title %}
               {{ site.title }}
               {% endif %}
             </h1>
@@ -48,7 +48,7 @@
             <a class="brand" href="{{ site.url }}" role="banner" itemprop="url">
             <h1 class="blog-title light" itemprop="name">
               {% if site.logo %}<img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}" alt="{{ site.title }}" />
-              {% elsif site.title }%
+              {% elsif site.title %}
               {{ site.title }}
               {% endif %}
             </h1>
