--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -457,7 +457,8 @@ html {
   width: 100%;
   height: 60%;
   padding: 24px 0;
-  margin-bottom: 72px;
+  /*  margin-bottom: 72px; */
+  margin-bottom: 12px;
   box-sizing: border-box;
 }
 #masthead.align-left {
@@ -587,7 +588,8 @@ html {
 /* FOOTER */
 /* ------ */
 #footer {
-  margin-top: 72px;
+    /*  margin-top: 72px; */
+    margin-top: 12px;
   padding: 124px 0 72px;
   position: relative;
   width: 100%;
