--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
             </h1>
                 
             </a>
-            <h2 class="blog-description light bordered bordered-top" itemprop="description">
+            <h2 class="blog-description light" itemprop="description">
                 {{ page.headline }}
             </h2>
         </div>
@@ -45,14 +45,16 @@
     <div class="inner">
         <div class="container">
             <a class="brand" href="{{ site.url }}" role="banner" itemprop="url">
-            <h1 class="blog-title light" itemprop="name">
-              {% if site.logo %}<img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}" alt="{{ site.title }}" />
-              {% elsif site.title %}
-              {{ site.title }}
-              {% endif %}
-            </h1>
-                
+              <h1 class="blog-title light" itemprop="name">
+                {% if site.logo %}<img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}" alt="{{ site.title }}" />
+                {% elsif site.title %}
+                {{ site.title }}
+                {% endif %}
+              </h1>
             </a>
+            <h2 class="blog-description light" itemprop="description">
+                {{ site.description }}
+            </h2>
         </div>
     </div>
     {% endif %}
