--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,14 +36,9 @@
         <div class="container">
             <a class="brand light" href="{{ site.url }}" role="banner" itemprop="url">
 
-                {% if site.logo %}<img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}" alt="{{ site.title }} Logo" />{% endif %}
-
-            <h1 class="blog-title light" itemprop="name">
-                {{ site.title }}
-            </h1>
-                
+                {% if site.logo %}<img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}" alt="{{ site.title }} Logo" />{% endif %}    
             </a>
-            <h2 class="blog-description light bordered bordered-top" itemprop="description">
+            <h2 class="blog-description light " itemprop="description">
                 {{ site.description }}
             </h2>
         </div>
