--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -459,6 +459,7 @@ html {
   text-align: center;
   width: 100%;
   height: 60%;
+  max-height: 500px;
   padding: 24px 0;
   /*  margin-bottom: 72px; */
   margin-bottom: 12px;
