--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2245,8 +2245,8 @@ fieldset[disabled] .btn-warning.active {
 }
 .btn-danger {
   color: #fff;
-  background-color: #d9534f;
-  border-color: #d43f3a;
+  background-color: #3385D6;
+  border-color: #3385D6;
 }
 .btn-danger:hover,
 .btn-danger:focus,
