--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ blockquote:before {
 }
 .cursive {
   font-family: 'Sacramento', cursive;
-  color: #17e4d8;
+  color: #3385D6;
   font-size: 34px;
   text-align: center;
 }
@@ -473,7 +473,8 @@ html {
 }
 /* - Brand - */
 .brand img {
-  max-height: 120px;
+  max-height: 280px;
+  margin-bottom: 70px;
 }
 /* - Blog title and description - */
 .blog-title {
@@ -497,9 +498,6 @@ html {
   z-index: 1;
 }
 @media (max-width: 480px) {
-  .brand img {
-    max-height: 60px;
-  }
   .blog-title {
     font-size: 24px;
     line-height: 24px;
